--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build: 
-    runs-on: windows-2022
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -26,8 +26,9 @@ jobs:
           retention-days: 5
 
 message_sending: 
-needs: build
-    runs on: windows-2022
+    needs: build
+    
+    runs on: windows-latest
     
     steps:
       #- uses: actions/checkout@v3
