--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -28,7 +28,7 @@ jobs:
 message_sending: 
     needs: build
     
-    runs on: windows-latest
+    runs-on: windows-latest
     
     steps:
       #- uses: actions/checkout@v3
