--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -31,7 +31,7 @@ message_sending:
     runs-on: windows-latest
     
     steps:
-      #- uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       #- uses: actions/download-artifact@v3
         #with: 
