--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,10 +1,10 @@
-name: Python_bot
+name: CI
 
 on:
-    push:
-      branches: { main }
-    pull_request:
-      branches: { main }
+  push:
+    branches: { main }
+  pull_request:
+    branches: { main }
 
 env:
   app_name: build_number${{ github.run_number }} 
