--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]   
 
 env:
   app_name: build_number${{ github.run_number }} 
