--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,22 +11,18 @@ env:
 
 jobs:
   build: 
-    strategy: 
-      matrix:
-        os: [ubuntu-latest, windows-2022]
-        
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
       - name: Building application
-        run: g++ hello.cpp -o ${{ runner.os }}-${{ env.app_name }}
+        run: g++ hello.cpp -o ${{ env.app_name }}_${{ runner.os }}
 
       - name: Uploading result
         uses: actions/upload-artifact@v3
         with: 
           name: artifacts
-          path: ${{ runner.os }}-${{ env.app_name }}
+          path: ${{ env.app_name }}_${{ runner.os }}
 
   message_sending: 
     needs: build
