--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,5 +45,5 @@ jobs:
           message: |
             Repository: ${{ github.repository }} 
             Event: ${{ github.event_name }}
-            Branch: ${{ github.branch_name }}
+            Branch: ${{ github.branch }}
           document: artifacts_folder/**
